User manager ok

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -6,4 +6,5 @@ body {
 @import '/layout/header';
 @import '/layout/passwords';
 @import '/layout/forms';
+@import '/layout/crew';
 @import '/typography/typography';
