--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -3,8 +3,17 @@
   <div class="heading">
 <label>Create new member</label>
 </div>
+<div class="search-input">
 {{ form_widget(form.username,{'attr': {'placeholder': 'Username'}}) }}
-  {{ form_widget(form.email,{'attr': {'placeholder': 'Email'}}) }}
-
+<span class="icon-search">  <img class="logo_small" src=" {{asset('images/user.svg')}}"></span>
+</div>
+<div class="search-input">
+{{ form_widget(form.email,{'attr': {'placeholder': 'Email'}}) }}
+<span class="icon-search">  <img class="logo_small" src=" {{asset('images/email.svg')}}"></span>
+</div>
+<div class="search-input">
+{{ form_widget(form.phone,{'attr': {'placeholder': 'Tel'}}) }}
+<span class="icon-search">  <img class="logo_small" src=" {{asset('images/phone.svg')}}"></span>
+</div>
   <button class="btn" id='adduser'>{{ button_label|default('+') }}</button>
 {{ form_end(form) }}
