--- a/assets/sass/layout/_app.scss
+++ b/assets/sass/layout/_app.scss
@@ -12,10 +12,33 @@ button, input[type='submit']{
 
 }
 .container{
-  margin-top: 80px;
+
   max-width: $max-width;
-  margin:100px auto;
-  text-align: center;
+  margin:0px auto;
+  margin-top:0px;
+  padding-top: 60px;
+  text-align: center;display: flex;
+  aside{
+    width: 300px;
+    margin-top:-40px;
+    text-align: left;
+    border-left:1px solid #eeeeee;
+    border-right:1px solid #eeeeee;
+    height: 100vh;
+    position: fixed;
+
+
+  }
+  main{
+      height: 100vh;
+      width: 100%;
+        margin-top:-40px;
+      border-right:1px solid #eeeeee;
+
+  }
+  h1{
+    margin-top:0px;
+  }
   .logo{
     margin: 0 auto;
     max-width: 200px;
