--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -3,8 +3,30 @@
 
 {% block body %}
 
+<form name="app_user_registration" method="post" id="adduserForm">
 
-    {{ include('user/_form.html.twig') }}
+  <div class="heading">
+<label>Create new member</label>
+</div>
+<div class="search-input">
+{{ form_widget(form.username,{'attr': {'placeholder': 'Username'}}) }}
+<span class="icon-search">  <img class="logo_small" src=" {{asset('images/user.svg')}}"></span>
+</div>
+<div class="search-input">
+{{ form_widget(form.email,{'attr': {'placeholder': 'Email'}}) }}
+<span class="icon-search">  <img class="logo_small" src=" {{asset('images/email.svg')}}"></span>
+</div>
+<div class="search-input">
+{{ form_widget(form.phone,{'attr': {'placeholder': 'Tel'}}) }}
+<span class="icon-search">  <img class="logo_small" src=" {{asset('images/phone.svg')}}"></span>
+</div>
+
+
+{{ form_widget(form._token) }}
+
+<button class="btn" id='adduser'>{{ button_label|default('+') }}</button>
+
+</form>
 
 
 
@@ -35,7 +57,7 @@
 */
       // get the properties and values from the form
       var form_data = form.serialize();
-console.log(form_data)
+      console.log(form_data)
       // always makes sense to signal user that something is happening
       //$('#loadingSpinner').show();
 
