--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -7,4 +7,5 @@ body {
 @import '/layout/passwords';
 @import '/layout/forms';
 @import '/layout/crew';
+@import '/layout/dates';
 @import '/typography/typography';
