--- a/assets/sass/layout/_app.scss
+++ b/assets/sass/layout/_app.scss
@@ -1,47 +1,50 @@
-body{
-  font-family: 'Roboto', sans-serif;
-  background:white;
-
+body {
+    font-family: 'Roboto', sans-serif;
+    background: white;
 }
-button, input[type='submit']{
-  background: $secondary-color;
-  border:none;
-  color:white;
-  text-transform: uppercase;
-  padding: 10px 15px;
 
+button,
+input[type='submit'] {
+    background: $secondary-color;
+    border: none;
+    color: white;
+    text-transform: uppercase;
+    padding: 10px 15px;
 }
-.container{
 
-  max-width: $max-width;
-  margin:0px auto;
-  margin-top:0px;
-  padding-top: 60px;
-  text-align: center;display: flex;
-  aside{
-    width: 300px;
-    margin-top:-40px;
-    text-align: left;
-    border-left:1px solid #eeeeee;
-    border-right:1px solid #eeeeee;
-    height: 100vh;
-    position: fixed;
-
-
-  }
-  main{
-      height: 100vh;
-      width: 100%;
-        margin-top:-40px;
-      border-right:1px solid #eeeeee;
-
-  }
-  h1{
-    margin-top:0px;
-  }
-  .logo{
+.container {
+    max-width: $max-width;
     margin: 0 auto;
-    max-width: 200px;
-  }
+    padding-top: 60px;
+    text-align: center;
+    display: flex;
 
+    aside {
+        width: 300px;
+        margin-top: -20px;
+        text-align: left;
+        border-left: 1px solid #eeeeee;
+        border-right: 1px solid #eeeeee;
+        
+        position: fixed;
+    }
+
+    main {
+        height: 100%;
+        width: calc(100% - 300px);
+        margin-left: 300px;
+        margin-top: -40px;
+        //border-right: 1px solid #eeeeee;
+        text-align: left;
+        padding-left: 30px;
+    }
+
+    h1 {
+        margin-top: 0;
+    }
+
+    .logo {
+        margin: 0 auto;
+        max-width: 200px;
+    }
 }
