--- a/assets/sass/layout/_crew.scss
+++ b/assets/sass/layout/_crew.scss
@@ -3,6 +3,7 @@
   align-items: center;
   padding: 10px ;
   background:#f7f7f7;
+  border-top: 1px solid #eeeeee;
   h1{
     flex: 2;
     margin-bottom: 0;
