--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -30,7 +30,7 @@ header{
     .nav-center,.nav-right{
       width: 100%;
     }
-    .nav-left{
+    .nav-left,.nav-right{
       display: flex;
       align-items: center;
       .logo_small{
@@ -43,17 +43,14 @@ header{
       .dropdown{
         position: relative;
         width: 100%;
-        >a{
 
-
-
-        }
         div{
           z-index: 1;
-
           display: none;
           flex-flow: column;
           position: absolute;
+          right: 0;
+          top:25px;
           background:$primary-color;
           border-top: 1px solid #eeeeee;
           border-bottom:1px solid #eeeeee;
