--- a/templates/crew/edit.html.twig
+++ b/templates/crew/edit.html.twig
@@ -18,7 +18,7 @@
   </div>
   {{ include('user/search_form.html.twig') }}
   <div class="selected"></div>
-  <div id="crew_users">
+  <div id="crew_users" class="addedUsers">
       {% for user in users %}
         {% if ( user) == (owner)  %}
           <div class="userItemadmin" >
@@ -58,16 +58,9 @@
 <div id="newUser"></div>
   <a href='{{ path('crew_display',{'id':currentId}) }}'>back to crew</a>
 <script>
-
+var currentId='{{currentId}}';
   //
-      var path='{{ path('user_new') }}';
-    //  console.log(path);
-      $.ajax({
-        url: path,
-        context: document.body
-      }).done(function(data) {
-        $( '#createNew' ).html( data );
-      });
+
 
       $(document).on('click','#crew_save',function(e){
       e.preventDefault();
@@ -99,6 +92,37 @@
             }
          }})
        })
+       function displayResults(){
 
+         if(results === undefined || results.length == 0 && $('#searchform input[type="search"]').val().length>2){
+
+           $('#createNew').removeClass('hide');
+
+             $('#searchform input[type="search"]').css('color', 'red');
+
+         }
+         else{
+           $('#createNew').addClass('hide');
+               $('#searchform input[type="search"]').css('color', 'black');
+         }
+         $('#users_results .userItem').remove();
+
+           for(let i in results){
+             $('#users_results').append('<div class="userItem" >\
+             <input type="checkbox" id="crew_users_'+results[i]['id']+'" name="crew[users][]" value="'+results[i]['id']+'" checked>\
+             <span><label for="crew_users_'+results[i]['id']+'">'+results[i]['username']+'</label>\
+             <label for="crew_users_'+results[i]['id']+'">'+results[i]['email']+'</label></span>\
+             <select><option value="test" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">test</option>\
+             <option value="other" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">other</option></select></div>');
+         }
+       }
+       function displayNewUser(data){
+           $('.addedUsers').append('<div class="userItem" >\
+           <input type="checkbox" id="crew_users_'+data.userId+'" name="crew[users][]" value="'+data.userId+'" checked>\
+           <span><label for="crew_users_'+data.userId+'">'+data.username+'</label>\
+           <label for="crew_users_'+data.userId+'">'+data.useremail+'</label></span>\
+           <select><option value="test" data-crew="'+currentId+'" data-user="'+data.userId+'">test</option>\
+           <option value="other" data-crew="'+currentId+'" data-user="'+data.userId+'">other</option></select></div>');
+       }
     </script>
 {% endblock %}
