--- a/templates/date/new.html.twig
+++ b/templates/date/new.html.twig
@@ -3,11 +3,75 @@
 {% block title %}{% endblock %}
 
 {% block body %}
-    {{crewid}}
-    {{ form_start(form) }}
+    {{dateid}}
+
+<form name="date_entity" method="post" id="date_entity">
+<p> Type </p>
+{{ form_widget(form.type)}}
+<p> City </p>
+{{ form_widget(form.city)}}
+<p> Day </p>
+{{ form_widget(form.day)}}
+{{ include('user/search_form.html.twig') }}
+<div class="selected"></div>
+
+<p> Users </p>
+<div id="date_entity_users" class="addedUsers">
+    <div class="userItem">
+
+
+    <input type="checkbox" id="date_entity_users_2" name="date_entity[users][]" value="2">
+    <label for="date_entity_users_2">admin</label>
+    </div>
+</div>
+<hr />
+<div id="date_entity_schedule">
+
+</div>
+
+
+<br />
+{{ form_widget(form.save)}}
+{{ form_widget(form._token) }}
+
+</form>
+
+
+<script>
+var currentId ="{{crewid}}";
+function displayResults(){
+  if(results === undefined || results.length == 0 && $('#searchform input[type="search"]').val().length>2){
+
+    $('#createNew').removeClass('hide');
+
+      $('#searchform input[type="search"]').css('color', 'red');
+
+  }
+  else{
+    $('#createNew').addClass('hide');
+        $('#searchform input[type="search"]').css('color', 'black');
+  }
+  $('#users_results .userItem').remove();
+
+    for(let i in results){
+      $('#users_results').append('<div class="userItem" >\
+      <input type="checkbox" id="date_entity_'+results[i]['id']+'" name="date_entity[users][]" value="'+results[i]['id']+'" checked>\
+      <span><label for="date_entity_'+results[i]['id']+'">'+results[i]['username']+'</label>\
+      <label for="date_entity_'+results[i]['id']+'">'+results[i]['email']+'</label></span>\
+      <select><option value="test" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">test</option>\
+      <option value="other" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">other</option></select></div>');
+  }
+}
+function displayNewUser(data){
+    $('.addedUsers').append('<div class="userItem" >\
+    <input type="checkbox" id="date_entity_'+data.userId+'" name="date_entity[users][]" value="'+data.userId+'" checked>\
+    <span><label for="date_entity_'+data.userId+'">'+data.username+'</label>\
+    <label for="date_entity_'+data.userId+'">'+data.useremail+'</label></span>\
+    <select><option value="test" data-crew="'+currentId+'" data-user="'+data.userId+'">test</option>\
+    <option value="other" data-crew="'+currentId+'" data-user="'+data.userId+'">other</option></select></div>');
+}
+</script>
 
 
 
-
-    {{ form_end(form) }}
 {% endblock %}
