--- a/templates/user/search_form.html.twig
+++ b/templates/user/search_form.html.twig
@@ -10,12 +10,17 @@
 </div>
 {% endblock %}
 <script>
-
+var path='{{ path('user_new') }}';
+//  console.log(path);
+$.ajax({
+  url: path,
+  context: document.body
+}).done(function(data) {
+  $( '#createNew' ).html( data );
+});
 var url='{{ path('user_search') }}';
 var users;
 var results=[];
-var currentId='{{currentId}}';
-
   $.ajax({
     dataType: "json",
     url:url,
@@ -24,26 +29,22 @@ var currentId='{{currentId}}';
     }
   });
 
-
-
   function showMe(e) {
     results = [];
     selected =[];
+
     if(e.value.length>2){
 
       $('#crew_users .userItem input').each(function(){
         selected.push($(this).val());
 
       })
-      if (users.length>0){
-
-
       for(let i in users){
         if( users[i]['username'].includes(e.value)){
             results.push(users[i]);
         }
       }
-       }
+
     }
 
       for (let x in selected){
@@ -58,37 +59,14 @@ var currentId='{{currentId}}';
     displayResults();
   }
 
-  function displayResults(){
 
-    if(results === undefined || results.length == 0 && $('#searchform input[type="search"]').val().length>2){
-
-      $('#createNew').removeClass('hide');
-
-        $('#searchform input[type="search"]').css('color', 'red');
-
-    }
-    else{
-      $('#createNew').addClass('hide');
-          $('#searchform input[type="search"]').css('color', 'black');
-    }
-  $('#users_results .userItem').remove();
-
-      for(let i in results){
-        $('#users_results').append('<div class="userItem" >\
-        <input type="checkbox" id="crew_users_'+results[i]['id']+'" name="crew[users][]" value="'+results[i]['id']+'" checked>\
-        <span><label for="crew_users_'+results[i]['id']+'">'+results[i]['username']+'</label>\
-        <label for="crew_users_'+results[i]['id']+'">'+results[i]['email']+'</label></span>\
-        <select><option value="test" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">test</option>\
-        <option value="other" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">other</option></select></div>');
-    }
-  }
   $(document).on('click','#users_results .userItem',function(e){
     e.preventDefault();
     $('#searchform input[type="search"]').val('');
-    $(this).appendTo($('#crew_users'));
+    $(this).appendTo($('.addedUsers'));
     $('#users_results .userItem').remove();
   })
-  $(document).on('click','#crew_users .userItem',function(e){
+  $(document).on('click','.addedUsers .userItem',function(e){
     e.preventDefault();
    $(this).remove();
   })
