--- a/templates/crew/new.html.twig
+++ b/templates/crew/new.html.twig
@@ -41,9 +41,9 @@
     <div id="newUser"></div>
 
 <script>
+
 var currentId='{{currentId}}';
-
-
+var roles = ["musician","driver",'manager'];
 //--- On Save function submit---//
 $(document).on('click','#crew_save',function(e){
  e.preventDefault();
@@ -61,8 +61,8 @@ $(document).on('click','#crew_save',function(e){
         console.log(data.crewId)
         // Register role for every user
         $('#crew_users option:selected').each(function(){
-          let val =$(this).val();
-          let user= $(this).attr('data-user');
+          let val = $(this).val();
+          let user = $(this).attr('data-user');
           let crew = $(this).attr('data-crew');
           $.ajax({
            type:'POST',
@@ -76,37 +76,23 @@ $(document).on('click','#crew_save',function(e){
    }})
  })
 
- function displayResults(){
 
-   if(results === undefined || results.length == 0 && $('#searchform input[type="search"]').val().length>2){
+ 
 
-     $('#createNew').removeClass('hide');
-
-       $('#searchform input[type="search"]').css('color', 'red');
-
-   }
-   else{
-     $('#createNew').addClass('hide');
-         $('#searchform input[type="search"]').css('color', 'black');
-   }
-   $('#users_results .userItem').remove();
-
-     for(let i in results){
-       $('#users_results').append('<div class="userItem" >\
-       <input type="checkbox" id="crew_users_'+results[i]['id']+'" name="crew[users][]" value="'+results[i]['id']+'" checked>\
-       <span><label for="crew_users_'+results[i]['id']+'">'+results[i]['username']+'</label>\
-       <label for="crew_users_'+results[i]['id']+'">'+results[i]['email']+'</label></span>\
-       <select><option value="test" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">test</option>\
-       <option value="other" data-crew="'+currentId+'" data-user="'+results[i]['id']+'">other</option></select></div>');
-   }
- }
  function displayNewUser(data){
-     $('.addedUsers').append('<div class="userItem" >\
+     $('.addedUsers').append(function(){
+      let html='';
+      html+='<div class="userItem" >\
      <input type="checkbox" id="crew_users_'+data.userId+'" name="crew[users][]" value="'+data.userId+'" checked>\
      <span><label for="crew_users_'+data.userId+'">'+data.username+'</label>\
      <label for="crew_users_'+data.userId+'">'+data.useremail+'</label></span>\
-     <select><option value="test" data-crew="'+currentId+'" data-user="'+data.userId+'">test</option>\
-     <option value="other" data-crew="'+currentId+'" data-user="'+data.userId+'">other</option></select></div>');
+     <select>';
+     for (let x in roles){
+       html+='<option value="'+roles[x]+'" data-crew="'+currentId+'" data-user="'+data.userId+'">'+roles[x]+'</option>'
+     }
+     html+='</select></div>';
+     return html;
+      });
  }
 </script>
 {% endblock %}
